# rust-actix-simple-projekt

./: Cargo.toml  schema.graphql
src/: main.rs  schema.rs
src/database/: mod.rs  userdatabase.rs
src/domain/: addresses.rs  bill.rs  greeting.rs  mod.rs  price.rs  product.rs  user.rs
src/hello_responder/: hello.rs
src/responder/: bill_responder.rs  greeting_responder.rs  mod.rs  product_responder.rs  user_responder.rs
src/user_responder/: user_handler.rs
src/user_responder/model/: user.rs
