[package]
name = "csm"
version = "0.1.0"
authors = ["TobiW <tgwieprich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
actix-web = "3"
actix-cors = "0.4.0"
tokio = { version = "1.9.0", features = ["full"] }
sqlx = {version = "0.3.5", default_features = false, features = ["postgres","runtime-tokio",
"macros","chrono"]}
serde = { version = "1.0.110", features = ["derive"] }
chrono = {version = "0.4.11", features = ["serde"]}
juniper = "0.15"
serde_json = "1.0.44"